@@ -9,6 +9,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- fixed possible conflict between FLASH token FLASH folder
 	- preload FLASH files like single/group files (consistency)
 	- renamed/cleaned-up tilp_slct.c functions
+	- del_var: increase timeout due to garbage collecting
 
 - 18/07/2006, version 0.20 (0.1.3, 0.2.4, 0.2.2, 0.0.5): roms
 	- use ticalcs_probe instead of the previous code (easier & clearer)
